# burn-efficient-kan

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/mnist/: data.rs  main.rs  model.rs
src/: down_dim.rs  kaiming.rs  least_squares.rs  lib.rs  linear.rs  upgrade_dim.rs
